# assistant

./: .env.example  .gitignore  CLAUDE.md  DISTRIBUTED_TRACING_SPIKE.md  PHASE16_LANGFUSE.md  PLAN.md  README.md  STEPS.md  langgraph.json  pyproject.toml  requirements.txt
assistant/: __init__.py  agent.py  compaction.py  fa_service.py  interrupts.py  mac_tools.py  main.py  mcp_tools.py  memory.py  memory_extraction.py  memory_store.py  observability.py  prompts.py  server.py  studio.py  sub_agents.py  supervisor.py  thinking_repair.py  thread_store.py  tools.py  voice_daemon.py  voice_io.py  write_tools.py
assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
dashboard/src-tauri/src/: lib.rs
dashboard/src/components/chat/: ChatPanel.test.tsx  ChatPanel.tsx  InterruptGate.tsx
dashboard/src/components/cost/: CostPanel.test.tsx  CostPanel.tsx
dashboard/src/components/history/: HistoryPanel.test.tsx  HistoryPanel.tsx
dashboard/src/components/memory/: MemoryPanel.test.tsx  MemoryPanel.tsx
dashboard/src/components/theme/: ThemeToggle.tsx
dashboard/src/components/threads/: ThreadSidebar.test.tsx  ThreadSidebar.tsx
dashboard/src/lib/: api.ts  theme.tsx
launchd/: com.mohitvuyyuru.assistant-voice.plist
scripts/: otel_dedup_demo.py  sync_prompts_to_langfuse.py
tests/: test_compaction.py  test_interrupts.py  test_mac_tools.py  test_mcp_tools.py  test_memory.py  test_memory_extraction.py  test_memory_store.py  test_observability.py  test_prompts.py  test_server.py  test_sub_agents.py  test_supervisor.py  test_thinking_repair.py  test_thread_store.py  test_tools.py  test_voice_io.py  test_write_tools.py
