[project]
name = "assistant"
version = "0.1.0"
description = "A personal AI assistant built on the Claude API and LangGraph"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "langchain>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-tavily>=0.1.0",
    "langchain-mcp-adapters==0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "python-dotenv>=1.0.0",
    "faster-whisper>=1.2.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "pynput>=1.8.0",
    # Marker required: rumps -> pyobjc-framework-Cocoa has no Linux wheels
    # and its sdist build execs /usr/bin/sw_vers, so an unmarked dep breaks
    # any non-Mac install (cloud sessions, future CI).
    'rumps>=0.4.0; sys_platform == "darwin"',
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.4.0",
]

[project.scripts]
assistant = "assistant.main:main"
assistant-voice = "assistant.voice_daemon:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["assistant*"]
