[project]
name = "assistant"
version = "0.1.0"
description = "A personal AI assistant built on the Claude API and LangGraph"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "langchain>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-tavily>=0.1.0",
    "langchain-mcp-adapters==0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    # Was a transitive dependency of langgraph-checkpoint-sqlite; made
    # explicit in Phase 7 Part B (assistant/memory_store.py), which now
    # imports it directly for the long-term-facts SQLite table.
    "aiosqlite>=0.20.0",
    # Same story — transitive via langchain; made explicit in Phase 7 Part B
    # (assistant/memory_extraction.py's structured-output extraction models).
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # Apple MLX only ships arm64 (Apple Silicon) wheels — swapped in for
    # Phase 8 after a real benchmark showed 6-8x lower STT latency than
    # faster-whisper large-v3 on CPU (STEPS.md 52).
    'mlx-whisper>=0.4.0; sys_platform == "darwin" and platform_machine == "arm64"',
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "pynput>=1.8.0",
    # Marker required: rumps -> pyobjc-framework-Cocoa has no Linux wheels
    # and its sdist build execs /usr/bin/sw_vers, so an unmarked dep breaks
    # any non-Mac install (cloud sessions, future CI).
    'rumps>=0.4.0; sys_platform == "darwin"',
    # Phase 9: assistant/server.py, the dashboard app's backend wrapper.
    # uvicorn was already a transitive dep (via langgraph-api/mcp); made
    # explicit now that server.py imports it directly to run the app.
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    # Phase 9 step 6: /cost's real LangSmith aggregates (Client.get_run_stats).
    # Was already a transitive dep (LangSmith tracing, Phase 3); made
    # explicit now that server.py imports it directly.
    "langsmith>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.4.0",
    # Phase 10: adopted so `pytest` can run/collect the existing plain-
    # function test files (tests/ was already pytest-shaped — assert-based,
    # test_*.py/test_* naming — just run via `python tests/test_x.py`
    # before this). No test rewrites needed.
    "pytest>=8.0.0",
    # Several test files use `async def test_...` directly (their own
    # __main__ runner blocks wrap each in asyncio.run()) — pytest can't
    # call an async test function without this plugin.
    "pytest-asyncio>=0.24.0",
    # GitHub cleanup pass: lint/format, no prior tool configured.
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# Long, information-dense comments/docstrings are this project's deliberate
# style (see CLAUDE.md's Conventions) — not enforcing a wrap width on them.
ignore = ["E501"]

[project.scripts]
assistant = "assistant.main:main"
assistant-voice = "assistant.voice_daemon:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["assistant*"]
